Updated .gitignore and cleanup.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-**/temp
-unity-web-shell/Library
-**/Library/metadata
-**/Library/ShaderCache
+temp
+engine/Temp
+engine/obj
+engine/Library
+engine/UnityPackageManager
+engine/Assets/**/*.meta
+engine/ProjectSettings/AudioManager.asset
+engine/ProjectSettings/ClusterInputManager.asset
+engine/ProjectSettings/DynamicsManager.asset
+engine/ProjectSettings/EditorBuildSettings.asset
+engine/ProjectSettings/InputManager.asset
+engine/ProjectSettings/NavMeshAreas.asset
+engine/ProjectSettings/NetworkManager.asset
+engine/ProjectSettings/Physics2DSettings.asset
+engine/ProjectSettings/TagManager.asset
+engine/ProjectSettings/TimeManager.asset
+engine/ProjectSettings/UnityConnectSettings.asset
+engine/Assembly-CSharp.csproj
+engine/engine.sln
+
+engine/.vscode
+engine/.idea
+engine/Assembly-CSharp-Editor-firstpass.csproj
+engine/Assets/Plugins/Editor/JetBrains
