--- a/resources/misc/manifest.json
+++ b/resources/misc/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Kharynic: The History of Mine Valley",
+    "name": "Kharynic - The History of Mine Valley",
     "description": "classic 3D role playing game in dark fantasy setting",
     "icons": [{
       "src": "/resources/images/icon.png",
