#engine logging tweaks and explicit camera creation

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ engine/Assets/Plugins/Editor/JetBrains
 engine/Assembly-CSharp-Editor.csproj.DotSettings
 
 engine/Assets/UnityStandardAssets
+engine/Assets/debug.log
