#webhost added short name to web app manifest

--- a/resources/misc/manifest.json
+++ b/resources/misc/manifest.json
@@ -1,4 +1,5 @@
 {
+    "short_name": "Kharynic",
     "name": "Kharynic - The History of Mine Valley",
     "description": "classic 3D role playing game in dark fantasy setting",
     "icons": [{
