--- a/resources/misc/manifest.json
+++ b/resources/misc/manifest.json
@@ -1,7 +1,6 @@
 {
-    "short_name": "Kharynic",
-    "name": "Kharynic - The History of Mine Valley",
-    "description": "classic 3D role playing game in dark fantasy setting",
+    "name": "Kharynic",
+    "description": "The History of Mine Valley. 3d role-playing game in medieval dark fantasy setting",
     "icons": [{
       "src": "/resources/images/icon.png",
         "sizes": "256x256",
