#engine cleanup of generated file paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,33 @@
 temp
 wip
-engine/Temp
-engine/obj
-engine/Library
-engine/UnityPackageManager
-engine/Assets/**/*.meta
-engine/ProjectSettings/AudioManager.asset
-engine/ProjectSettings/ClusterInputManager.asset
-engine/ProjectSettings/DynamicsManager.asset
-engine/ProjectSettings/EditorBuildSettings.asset
-engine/ProjectSettings/InputManager.asset
-engine/ProjectSettings/NavMeshAreas.asset
-engine/ProjectSettings/NetworkManager.asset
-engine/ProjectSettings/Physics2DSettings.asset
-engine/ProjectSettings/TagManager.asset
-engine/ProjectSettings/TimeManager.asset
-engine/ProjectSettings/UnityConnectSettings.asset
-engine/Assembly-CSharp.csproj
-engine/Assembly-CSharp-Editor.csproj
-engine/Assembly-CSharp-Editor-firstpass.csproj
-engine/engine.sln
+Engine/Temp
+Engine/obj
+Engine/Library
+Engine/UnityPackageManager
+Engine/Assets/**/*.meta
+Engine/ProjectSettings/AudioManager.asset
+Engine/ProjectSettings/ClusterInputManager.asset
+Engine/ProjectSettings/DynamicsManager.asset
+Engine/ProjectSettings/EditorBuildSettings.asset
+Engine/ProjectSettings/InputManager.asset
+Engine/ProjectSettings/NavMeshAreas.asset
+Engine/ProjectSettings/NetworkManager.asset
+Engine/ProjectSettings/Physics2DSettings.asset
+Engine/ProjectSettings/TagManager.asset
+Engine/ProjectSettings/TimeManager.asset
+Engine/ProjectSettings/UnityConnectSettings.asset
+Engine/Assembly-CSharp.csproj
+Engine/Assembly-CSharp-Editor.csproj
+Engine/Assembly-CSharp-Editor-firstpass.csproj
+Engine/engine.sln
+Engine/Debug.log
 *__jb_*
 *.generated.cs
 *.generated.jslib
 
-engine/.vscode
-engine/.idea
-engine/Assets/Plugins/Editor/JetBrains
-engine/Assembly-CSharp-Editor.csproj.DotSettings
+Engine/.vscode
+Engine/.idea
+Engine/Assets/Plugins/Editor/JetBrains
+Engine/Assembly-CSharp-Editor.csproj.DotSettings
 
-engine/Assets/UnityStandardAssets
-engine/Assets/debug.log
+Engine/Assets/UnityStandardAssets
